[project]
name = "echomatrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.52.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
